--- a/SE/index.html
+++ b/SE/index.html
@@ -7,6 +7,8 @@
 		Soonery Emergency
 	</title>
 	
+	<!-- link to elements.html -->
+	<link rel="import" href="elements/elements.html">
 </head>
 
 <body>
