--- a/SE/index.html
+++ b/SE/index.html
@@ -4,14 +4,33 @@
 	<meta charset="utf-8">
 	
 	<title>
-		Soonery Emergency
+		Sooner Emergency
 	</title>
+	
+	<link rel="stylesheet" href="Styles/main.css">
 	<link rel="import" href="elements/elements.html">
 	<script src="lib/polymer"></script>
 	
 </head>
 	
 <body>
+	        <!-- Main Toolbar -->
+        <paper-toolbar id="mainToolbar" >
+         
+
+          <!-- Application name -->
+           <h3>Sooner Emergency</h3>
+		   <div id="menuLinks" >
+			   <ul>
+				   <li><a>Home</a></li>
+				   <li><a>About Us</a></li>
+				   <li><a>Services</a></li>
+				   <li><a>Contact Us</a></li>
+				   <li><a>Links</a></li>
+				</ul>
+		   </div>
+
+        </paper-toolbar>
 	<paper-material elevation="1">
 		<h2>Hello World</h2>
 	</paper-material>
