--- a/Sooner Emergency/app/elements/routing.html
+++ b/Sooner Emergency/app/elements/routing.html
@@ -45,18 +45,22 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       app.route = 'home';
     });
 
-    page('/users', function() {
-      app.route = 'users';
+    page('/about', function() {
+      app.route = 'about';
     });
-
-    page('/users/:name', function(data) {
-      app.route = 'user-info';
-      app.params = data.params;
+    
+    page('/services', function() {
+      app.route = 'services';
     });
 
     page('/contact', function() {
       app.route = 'contact';
     });
+    
+    page('/links', function() {
+      app.route = 'links';
+    });
+
 
     // 404
     page('*', function() {
