--- a/Sooner Emergency/app/elements/elements.html
+++ b/Sooner Emergency/app/elements/elements.html
@@ -27,6 +27,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/paper-tabs/paper-tabs.html">
 <link rel="import" href="../bower_components/paper-tabs/paper-tab.html">
 
+<!-- Google web components -->
+<link rel="import" href="../bower_components/google-map/google-map.html">
+<link rel="import" href="../bower_components/google-map/google-map-marker.html">
+
+
 <!-- Uncomment next block to enable Service Worker Support (2/2) -->
 <!--
 <link rel="import" href="../bower_components/platinum-sw/platinum-sw-cache.html">
