--- a/Sooner Emergency/app/index.html
+++ b/Sooner Emergency/app/index.html
@@ -226,7 +226,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
                             2131 S. 49th West Avenue</br>
                             Tulsa, Ok. 74107</br>
                             (918) 583-2021</br>
-                            <b><a href="https://goo.gl/maps/ohvhmTkw3wB2">Directions</a></b>
+                            <b><a href="https://goo.gl/maps/ohvhmTkw3wB2">View Larger</a></b>
                         </google-map-marker>
                     </google-map>
                 
